typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts.stderr
error: UndefinedSymbol {
    sym: Atom('MUnit' type=inline),
    span: Span {
        lo: BytePos(
            115,
        ),
        hi: BytePos(
            120,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts:8:9
  |
8 |         MUnit.test(a);
  |         ^^^^^

error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            126,
        ),
        hi: BytePos(
            127,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts:8:20
  |
8 |         MUnit.test(a);
  |                    ^

